Update to specification 1.1.1 (#107)
* Increase Buffer Size

The NginX reverse proxy sometimes increases the request block sizes to
more than the default maximum for this server. This addresses issue
nlpsandbox/phi-deidentifier-app#46.

* Add Flask Testing

* Update to Schema 1.1.1

* Update nlpsandboxclient & Annotator Versions

* Switch Unit Tests to Using Properly-formatted dicts

* Update Listed API Version to 1.1.1

* Fix Flake8 Issues

* Fix Flake8 Issues

* Update nlpsandbox-client version in test-requirements.txt
