# server/openapi_server/openapi/openapi.yaml
@@ -1,8 +1,8 @@
 openapi: 3.0.3
 info:
   contact:
-    email: thomas.schaffter@sagebionetworks.org
-    name: The NLP Sandbox Team
+    email: team@nlpsandbox.io
+    name: NLP Sandbox Team
     url: https://nlpsandbox.io
   description: |
     # Introduction
@@ -14,7 +14,7 @@ info:
     name: Apache 2.0
     url: https://github.com/nlpsandbox/nlpsandbox-schemas/blob/develop/LICENSE
   title: NLP Sandbox PHI Deidentifier API
-  version: 1.0.1
+  version: 1.1.1
   x-logo:
     url: https://nlpsandbox.github.io/nlpsandbox-schemas/logo.png
 servers:
@@ -185,7 +185,7 @@ components:
       example:
         identifier: awesome-note
         text: On 12/26/2020, Ms. Chloe Price met with Dr. Prescott in Seattle.
-        noteType: loinc:LP29684-5
+        type: loinc:LP29684-5
         patientId: awesome-patient
       properties:
         identifier:
@@ -198,7 +198,7 @@ components:
         text:
           description: The content of the clinical note
           type: string
-        noteType:
+        type:
           description: The note type (LOINC concept)
           type: string
         patientId:
@@ -210,9 +210,9 @@ components:
           type: string
       required:
       - identifier
-      - noteType
       - patientId
       - text
+      - type
       type: object
     MaskingCharConfig:
       description: Configuration for the masking char strategy. E.g. "John Smith lives
@@ -272,9 +272,11 @@ components:
             the selected strategy
           items:
             enum:
-            - text_physical_address
             - text_date
             - text_person_name
+            - text_physical_address
+            - text_id
+            - text_contact
             type: string
           type: array
       required:
@@ -301,7 +303,7 @@ components:
         note:
           identifier: awesome-note
           text: On 12/26/2020, Ms. Chloe Price met with Dr. Prescott in Seattle.
-          noteType: loinc:LP29684-5
+          type: loinc:LP29684-5
           patientId: awesome-patient
       properties:
         note:
@@ -378,6 +380,30 @@ components:
         addressType: city
         confidence: 95.5
       type: object
+    TextIdAnnotation:
+      allOf:
+      - $ref: '#/components/schemas/TextAnnotation'
+      - $ref: '#/components/schemas/TextIdAnnotation_allOf'
+      description: An ID annotation in a text
+      example:
+        start: 42
+        length: 11
+        text: 203-11-4535
+        idType: ssn
+        confidence: 95.5
+      type: object
+    TextContactAnnotation:
+      allOf:
+      - $ref: '#/components/schemas/TextAnnotation'
+      - $ref: '#/components/schemas/TextContactAnnotation_allOf'
+      description: A contact annotation in a text
+      example:
+        start: 42
+        length: 11
+        text: dave@uw.edu
+        contactType: email
+        confidence: 95.5
+      type: object
     AnnotationSet:
       description: Set of annotations of all types for a text
       example:
@@ -412,6 +438,28 @@ components:
           text: Seattle
           addressType: city
           confidence: 95.5
+        textIdAnnotations:
+        - start: 42
+          length: 11
+          text: 203-11-4535
+          idType: ssn
+          confidence: 95.5
+        - start: 42
+          length: 11
+          text: 203-11-4535
+          idType: ssn
+          confidence: 95.5
+        textContactAnnotations:
+        - start: 42
+          length: 11
+          text: dave@uw.edu
+          contactType: email
+          confidence: 95.5
+        - start: 42
+          length: 11
+          text: dave@uw.edu
+          contactType: email
+          confidence: 95.5
       properties:
         textDateAnnotations:
           description: Date annotations in a text
@@ -428,8 +476,20 @@ components:
           items:
             $ref: '#/components/schemas/TextPhysicalAddressAnnotation'
           type: array
+        textIdAnnotations:
+          description: ID annotations in a text
+          items:
+            $ref: '#/components/schemas/TextIdAnnotation'
+          type: array
+        textContactAnnotations:
+          description: Contact annotations in a text
+          items:
+            $ref: '#/components/schemas/TextContactAnnotation'
+          type: array
       required:
+      - textContactAnnotations
       - textDateAnnotations
+      - textIdAnnotations
       - textPersonNameAnnotations
       - textPhysicalAddressAnnotations
       type: object
@@ -468,10 +528,32 @@ components:
             text: Seattle
             addressType: city
             confidence: 95.5
+          textIdAnnotations:
+          - start: 42
+            length: 11
+            text: 203-11-4535
+            idType: ssn
+            confidence: 95.5
+          - start: 42
+            length: 11
+            text: 203-11-4535
+            idType: ssn
+            confidence: 95.5
+          textContactAnnotations:
+          - start: 42
+            length: 11
+            text: dave@uw.edu
+            contactType: email
+            confidence: 95.5
+          - start: 42
+            length: 11
+            text: dave@uw.edu
+            contactType: email
+            confidence: 95.5
         deidentifiedNote:
           identifier: awesome-note
           text: On 12/26/2020, Ms. Chloe Price met with Dr. Prescott in Seattle.
-          noteType: loinc:LP29684-5
+          type: loinc:LP29684-5
           patientId: awesome-patient
         originalAnnotations:
           textDateAnnotations:
@@ -504,6 +586,28 @@ components:
             length: 7
             text: Seattle
             addressType: city
+            confidence: 95.5
+          textIdAnnotations:
+          - start: 42
+            length: 11
+            text: 203-11-4535
+            idType: ssn
+            confidence: 95.5
+          - start: 42
+            length: 11
+            text: 203-11-4535
+            idType: ssn
+            confidence: 95.5
+          textContactAnnotations:
+          - start: 42
+            length: 11
+            text: dave@uw.edu
+            contactType: email
+            confidence: 95.5
+          - start: 42
+            length: 11
+            text: dave@uw.edu
+            contactType: email
             confidence: 95.5
       properties:
         originalAnnotations:
@@ -606,8 +710,8 @@ components:
         author: Awesome Team
         authorEmail: author@example.com
         url: https://example.com
-        toolType: nlpsandbox:date-annotator
-        toolApiVersion: 1.0.1
+        type: nlpsandbox:date-annotator
+        apiVersion: 1.1.1
       properties:
         name:
           description: The tool name
@@ -640,34 +744,34 @@ components:
           description: The URL to the homepage of the tool
           format: uri
           type: string
-        toolType:
+        type:
           description: The type of this tool
           example: nlpsandbox:date-annotator
           maxLength: 60
           minLength: 3
           pattern: ^[a-z0-9]+(?:-[a-z0-9]+)*(:)[a-z0-9]+(?:-[a-z0-9]+)*$
           type: string
-        toolApiVersion:
+        apiVersion:
           description: The version of the tool OpenAPI specification
           minLength: 1
           pattern: ^(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?$
           type: string
       required:
+      - apiVersion
       - author
       - authorEmail
       - description
       - license
       - name
       - repository
-      - toolApiVersion
-      - toolType
+      - type
       - url
       - version
       type: object
     ToolDependencies:
       description: A list of tool dependencies
       example:
-        toolDependencies:
+        tools:
         - name: awesome-nlp-tool
           version: 1.0.6
           license: apache-2.0
@@ -676,8 +780,8 @@ components:
           author: Awesome Team
           authorEmail: author@example.com
           url: https://example.com
-          toolType: nlpsandbox:date-annotator
-          toolApiVersion: 1.0.1
+          type: nlpsandbox:date-annotator
+          apiVersion: 1.1.1
         - name: awesome-nlp-tool
           version: 1.0.6
           license: apache-2.0
@@ -686,16 +790,16 @@ components:
           author: Awesome Team
           authorEmail: author@example.com
           url: https://example.com
-          toolType: nlpsandbox:date-annotator
-          toolApiVersion: 1.0.1
+          type: nlpsandbox:date-annotator
+          apiVersion: 1.1.1
       properties:
-        toolDependencies:
+        tools:
           description: A list of tools
           items:
             $ref: '#/components/schemas/Tool'
           type: array
       required:
-      - toolDependencies
+      - tools
       type: object
     TextDateAnnotation_allOf:
       properties:
@@ -720,4 +824,38 @@ components:
           - street
           - zip
           type: string
+      required:
+      - addressType
+      type: object
+    TextIdAnnotation_allOf:
+      properties:
+        idType:
+          description: Type of ID information
+          enum:
+          - account
+          - bio_id
+          - device
+          - health_plan
+          - id_num
+          - license
+          - medical_record
+          - ssn
+          - vehicle
+          type: string
+      required:
+      - idType
+      type: object
+    TextContactAnnotation_allOf:
+      properties:
+        contactType:
+          description: Type of contact information
+          enum:
+          - email
+          - fax
+          - phone
+          - url
+          - other
+          type: string
+      required:
+      - contactType
       type: object
